readme and tests

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "vertical",
     "text",
     "sprite",
-    "displayObject"
+    "displayObject",
     "plugin"
   ],
   "author": "Brendon Blackwell",
